--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "@mui/material": "^5.10.15",
     "@mui/x-data-grid": "^5.17.12",
     "@reduxjs/toolkit": "^1.9.0",
-    "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^29.2.3",
@@ -41,7 +40,6 @@
     "react-otp-input": "^2.4.0",
     "react-phone-input-2": "^2.15.1",
     "react-redux": "^8.0.5",
-    "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
     "react-sweetalert2": "^0.5.2",
     "redux": "^4.2.0",
@@ -56,7 +54,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "jest --watch",
+    "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -64,6 +62,9 @@
       "react-app",
       "react-app/jest"
     ]
+  },
+  "jest": {
+    "transformIgnorePatterns": ["/node_modules/(?!(mui-tel-input)/)"]
   },
   "browserslist": {
     "production": [
@@ -78,14 +79,21 @@
     ]
   },
   "devDependencies": {
+    "@babel/core": "^7.22.9",
     "@babel/plugin-transform-react-jsx": "^7.21.5",
+    "@babel/preset-env": "^7.22.9",
     "@babel/preset-react": "^7.22.5",
+    "@babel/preset-typescript": "^7.22.5",
+    "@testing-library/jest-dom": "^5.17.0",
     "@types/redux-logger": "^3.0.9",
-    "babel-jest": "^29.5.0",
+    "babel-jest": "^29.6.2",
+    "install": "^0.13.0",
     "jest": "^29.3.1",
     "jest-puppeteer": "^6.1.1",
-    "puppeteer": "^19.3.0",
+    "npm": "^9.8.1",
+    "puppeteer": "^19.11.1",
     "react-app-rewired": "^2.2.1",
+    "react-router-dom": "^6.14.2",
     "ts-jest": "^29.0.3"
   }
 }
