--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "babel-jest": "^29.6.2",
     "install": "^0.13.0",
     "jest": "^29.3.1",
+    "jest-dom": "^4.0.0",
     "jest-puppeteer": "^6.1.1",
     "npm": "^9.8.1",
     "puppeteer": "^19.11.1",
